# Shreyas-Nayak

./: .gitattributes  README.md
Task 2.0/: LinearRegression.ipynb  Question.md  Readme.md
Task 2.1/: Logistic_Regression.ipynb  Readme.md
Task 2.2/: Bonus Task 2.2.ipynb  Quality_rating.csv  Readme.md
Task 3.0/: K-means clustering.ipynb  Readme.md
Task 3.2/: Decision_trees.ipynb  Question.md  Readme.md
Task 4.0/: Neural_networks.ipynb  Readme.md
Task 5.0/: Readme.md
Task 5.0/chatroom/: CMakeLists.txt  package.xml
Task 5.0/shreyas_5_0_chat_package/: package.xml  setup.cfg  setup.py
Task 5.0/shreyas_5_0_chat_package/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Task 5.0/shreyas_5_0_chat_package/install/shreyas_5_0_chat_package/lib/shreyas_5_0_chat_package/: chat_publisher  chat_subscriber
Task 5.0/shreyas_5_0_chat_package/install/shreyas_5_0_chat_package/share/shreyas_5_0_chat_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Task 5.0/shreyas_5_0_chat_package/log/: latest_build
Task 6.0/: Open CV.ipynb  Readme.md  answer9.py
Task 7.0/: Readme.md
Task 7.0/please/: CMakeLists.txt  package.xml
Task 7.0/please/maps/: map.yaml
Task 7.0/please/rough/: 123445.txt
Task 7.0/please/src/: work.cpp
Task 8.0/: Conv_Nueral_networks.ipynb  Readme.md
